set (OUTFILE "${REFRAMED_BUILD_BINDIR}/README.txt")
set (VERSION "${REFRAMED_VERSION}-${REFRAMED_VERSION_RC}")

configure_file ("README.txt.in" "${OUTFILE}")
file (READ "${REFRAMED_SOURCE_ROOT}/changelists/${REFRAMED_VERSION}-${REFRAMED_VERSION_RC}" CHANGELIST_CONTENT)
file (APPEND "${REFRAMED_BUILD_BINDIR}/README.txt" ${CHANGELIST_CONTENT})

install (
    FILES ${OUTFILE}
    DESTINATION ${REFRAMED_INSTALL_BINDIR})

